# rustytams

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile.tams-auth-server  LICENSE  Makefile  README.md  deploy.sh  requirements-dev.txt  schemathesis.toml
.github/workflows/: docker-build.yml
docs/: api-testing.md  architecture.md  configuration.md  integration-tests.md  walkthrough.md  web-ui.md
helm/tams/: Chart.yaml  values-prod.yaml  values.yaml
helm/tams/templates/: _helpers.tpl  clusterissuer.yaml  configmap.yaml  ingress.yaml  pvc.yaml  secrets.yaml  tams-auth.yaml  tams-server.yaml  tams-web.yaml
logo/: logo.pxd
scripts/: check-hurl-coverage.py  resolve-spec.py
tams-auth/: Cargo.toml
tams-auth-server/: Cargo.toml
tams-auth-server/src/: lib.rs  main.rs
tams-auth/src/: lib.rs
tams-server/: Cargo.toml
tams-server/src/: auth_client.rs  auth_middleware.rs  config.rs  error.rs  extract.rs  main.rs  router.rs  test_utils.rs
tams-server/src/handlers/: delete_requests.rs  docs.rs  flow_props.rs  flows.rs  mod.rs  objects.rs  segments.rs  service.rs  sources.rs  storage.rs  webhooks.rs
tams-server/swagger-ui/: index.html
tams-store/: Cargo.toml
tams-store/src/: lib.rs
tams-types/: Cargo.toml
tams-types/src/: error.rs  flow.rs  lib.rs  object.rs  pagination.rs  rational.rs  segment.rs  service.rs  source.rs  tags.rs  timerange.rs  timestamp.rs  webhook.rs
tams-web/: app.py  test_app.py
tams-web/frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tams-web/frontend/src/: App.svelte  app.css
tams-web/frontend/src/__tests__/: ConfirmDialog.test.ts  FlowDetail.test.ts  Pagination.test.ts  SourceDetail.test.ts  TagEditor.test.ts  ToastContainer.test.ts  api.test.ts  error-states.test.ts  flows.test.ts  hexdump.test.ts  hls.test.ts  ingest.test.ts  objects.test.ts  playerUtils.test.ts  rational.test.ts  router.test.ts  segments.test.ts  sources.test.ts  thumbnail.test.ts  timeline.test.ts  timerange.test.ts  toast.test.ts  webhooks.test.ts
tams-web/frontend/src/components/: ConfirmDialog.svelte  JsonEditor.svelte  Nav.svelte  Pagination.svelte  Spinner.svelte  TagEditor.svelte  ToastContainer.svelte
tams-web/frontend/src/lib/: api.ts  errors.ts  hexdump.ts  hls.ts  ingest.ts  playerUtils.ts  query.ts  rational.ts  router.ts  thumbnail.ts  timeline.ts  timerange.ts  toast.ts
tams-web/frontend/src/pages/: Dashboard.svelte  Editor.svelte  (+9 more)
tests/: api.hurl  errors.hurl
(+4 files in other folders)
