[package]
name = "tams-auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tams-auth = { path = "../tams-auth" }
salvo = { version = "0.89", features = ["affix-state"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
salvo = { version = "0.89", features = ["test"] }
tams-auth = { path = "../tams-auth", features = ["test-utils"] }
