[package]
name = "tams-auth"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

[dependencies]
tokio = { version = "1", features = ["sync", "time"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
