[package]
name = "tams-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tams-types = { path = "../tams-types" }
tams-store = { path = "../tams-store" }
salvo = { version = "0.89", features = ["basic-auth", "affix-state", "cors"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

[dev-dependencies]
salvo = { version = "0.89", features = ["test"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
tams-store = { path = "../tams-store", features = ["test-utils"] }
tams-auth = { path = "../tams-auth", features = ["test-utils"] }
tams-auth-server = { path = "../tams-auth-server" }
