[package]
name = "tams-store"
version = "0.1.0"
edition = "2021"

[dependencies]
tams-types = { path = "../tams-types" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
tracing = "0.1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

[features]
test-utils = []

[dev-dependencies]
tempfile = "3"
